syntax = "proto3";

package main;


option go_package = "Freenove_4WD_GO_Backend/dist/proto";

import "google/protobuf/empty.proto";

service Buzzer {
  rpc On (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Off (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Toggle (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc SetBPM (SetBPMRequest) returns (google.protobuf.Empty) {}
  rpc GetBPM (google.protobuf.Empty) returns (GetBPMRequest) {}
  rpc CalculateDuration(Song) returns (SongDuration) {}
  rpc ParseSong(SongStringPayload) returns (Song) {}
  rpc AsyncPlaySong(Song) returns (google.protobuf.Empty) {}
  rpc DoesSongStillPlay(google.protobuf.Empty) returns (SongStatus) {}
  rpc StopSong(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc GetSong(google.protobuf.Empty) returns (Song) {}
}

message SongStringPayload {
  string payload = 1;
}

message SongStatus {
  bool isPlaying = 1;
}

message SongDuration {
  float length = 1;
}

message SetBPMRequest {
  float bpm = 1;
}

message GetBPMRequest {
  float bpm = 1;
}

message Note {
  float duration = 1;
  float pitch = 2;
}

message Song {
  repeated Note notes = 1;
}